Added basic error function to halt in weird edge cases
Added some special chars
Added env-bind
added env-lookup
Added while primitive
Added read-byte primitive
Added support for Hex numbers being read in provided they are prefixed by 0x
Added ability to select file output
Added ability to select console output
Added ability to change memory allocation
Added M2-Planet build target and script

** Changed
Altered order of arguments in list_to_string function to simplify assembly implementation
Now hides all new definitions loading
Display string of unbound symbol to aid in debugging
Made assoc more flexible
Made set-type be a copying rather than overwriting operation
Gave assoc better names and let it return nil when none are found
Broke out non-standard functions into lisp.scm
Changed the behavior of (while #t (expression)) to allow for infinite loops

** Fixed
Fixed bug in line comments
Fixed bug in eq? such that it behaves correctly with strings
Program now behaves correctly when given bad file names
Fixed broken makefile

** Removed
Removed multiple type functions from Slow_lisp binary and into the ascension library
Removed redundent evaluation paths
Removed redundent function calls in regards to the number of free cells

* 0.2 - 2017-07-19
** Added
Added number?
Added string-append
Added Get-index
Added map
Added filter
Added length
Added string-length
Added eq?
Added fold-left
Added symbol?
Exported apply functionality

** Changed
Changed reverse to not depend on alternate functions

** Fixed

** Removed
Removed reving as it is only needed inside of reverse

* 0.1 - 2017-07-01
** Added
Added inital changelog
Added version message
Added Help message
Added support for multiple definition files
Added Test0 to demonstrate support for quote
Added Test1 to demonstrate support for list, cons, car, cdr, null? and cond
Added test target to make
Added support for raw strings
Added recursive support to integer->char
Added char->integer
Added string->list
Added char?