@@ -1,2 +1,5 @@
 fd6b0a0c9718b8c84ecaabf80aff487c4bb97057ddf1f7a7eb3ed227fdab2b7d  test/results/test0-result
 09fab5c40a8e615d865cc0f3a8c5045295d8f0f340eaa3d455c53d932117c1c8  test/results/test1-result
+b9f5eaf191e055fd6e1ecbe9d9b022050d67d4903230a93b588299a3b445efb3  test/results/test2-result
+582044331129e2f0eafef42f1cb9c8f6de4a2dd685d18cfd4553135dec7fd1db  test/results/test3-result
+55f12854fe5a21eb1c71875a0e07f8337080328a4144fc6cd767e1606f55d0a8  test/results/test4-result
