@@ -1,2 +1,0 @@
-(quote (Hello, Mescc!))
-(HALT)
